# GCR-chatbot-project

./: README.md
PFE-Chatbot-main/gcrbot/: README.md  pyproject.toml
PFE-Chatbot-main/gcrbot/knowledge/: pfe_projects.csv
PFE-Chatbot-main/gcrbot/src/gcrbot/: api.py  app.py  crew.py  gemini_tool.py  main.py
PFE-Chatbot-main/gcrbot/src/gcrbot/config/: agents.yaml  tasks.yaml
PFE-Chatbot-main/gcrbot/src/gcrbot/tools/: db_tool.py  scrape_website_tool.py
